--- a/Kerosene.ORM.SqlServer.csproj
+++ b/Kerosene.ORM.SqlServer.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2D092566-D251-4AB0-9441-06D39E31A4D8}</ProjectGuid>
+    <ProjectGuid>{4F186194-1E9B-4019-9CFE-6C31BE9E8A8A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Kerosene.ORM.SqlServer</RootNamespace>
@@ -35,55 +35,47 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="v2008\Api\IDataEngine.cs" />
     <Compile Include="v2008\Api\IParser.cs" />
-    <Compile Include="v2008\Concrete\DataEngine.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="v2008\Concrete\Parser.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="v2012\Api\IDataEngine.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="v2008\Concrete\DataEngine.cs" />
+    <Compile Include="v2008\Concrete\Parser.cs" />
+    <Compile Include="v2012\Api\IDataEngine.cs" />
     <Compile Include="v2012\Api\IParser.cs" />
-    <Compile Include="v2012\Api\IQueryCommand.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="v2012\Concrete\DataEngine.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="v2012\Concrete\Parser.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="v2012\Concrete\QueryCommand.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="v2012\Api\IQueryCommand.cs" />
+    <Compile Include="v2012\Concrete\DataEngine.cs" />
+    <Compile Include="v2012\Concrete\Parser.cs" />
+    <Compile Include="v2012\Concrete\QueryCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Kerosene.ORM\Kerosene.ORM.csproj">
-      <Project>{dc7ae7ef-edcb-4844-ab4b-b1392d63be75}</Project>
+      <Project>{32c0e054-03be-402b-be9f-a51a7a0b0ac9}</Project>
       <Name>Kerosene.ORM</Name>
     </ProjectReference>
     <ProjectReference Include="..\Kerosene.Tools\Kerosene.Tools.csproj">
-      <Project>{b63f81b0-d595-426d-bdc3-cdb6fab0f000}</Project>
+      <Project>{4cfe9465-0116-4a02-8cff-ca1f83fe200a}</Project>
       <Name>Kerosene.Tools</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="License\Kerosene.ORM.SqlServer.License.txt" />
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
+    <None Include="Configuracion\App.config" />
+    <None Include="Kerosene.ORM.SqlServer.nuspec" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Configuration\App.config" />
+    <Content Include="License.txt" />
+    <Content Include="ReleaseNotes.txt" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
